<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jatrik</string>
    <string name="boton_login">Login</string>
    <string name="label_login">Iniciar sesión</string>
    <string name="label_username">Usuario</string>
    <string name="label_password">Contraseña</string>
    <string name="action_settings">Logout</string>
    <string name="title_activity_home">Mi equipo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="title_section1">Mi Equipo</string>
    <string name="title_section2">Partidos</string>
    <string name="title_section3">Liga</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="nombre_equipo">Nombre del equipo</string>
    <string name="informacion_equipo">Información del equipo</string>
    <string name="escudo">Escudo del equipo</string>
    <string name="label_estadio">Estadio:</string>
    <string name="value_estadio">Nombre del estadio</string>
    <string name="label_socios">Socios:</string>
    <string name="value_socios">Número de socios</string>
    <string name="label_partidosJugados">Partidos jugados</string>
    <string name="label_proximosPartidos">Próximos partidos</string>
    <string name="title_activity_estadisticas_partido">Estadisticas del Partido</string>
    <string name="label_estadisticas">aca va: local vs visita, etc</string>
    <string name="label_resultado">Resultado del partido:</string>
    <string name="title_activity_minuto_aminuto">Ver partido en vivo</string>
    <string name="label_minutoAminuto">aca va: local vs visita, etc</string>

</resources>
