<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsi206.jatrik.DummyActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:columnCount="1" >

        <TextView
            android:id="@+id/nombreEquipoTextView"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="0"
            android:text="@string/nombre_equipo"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Space
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="1"
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        
        <View 
            android:layout_height="1px"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="2" 
            android:layout_width="fill_parent" 
            android:background="#000000"/>

        <Space
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="3"
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        
        <ImageView
            android:contentDescription="@string/escudo"
            android:id="@+id/imageView1"
            android:layout_width="193dp"
            android:layout_height="193dp"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="4"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />
        
        <Space
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="5"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/informacionEquipoTextView"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="6"
            android:text="@string/informacion_equipo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <GridLayout
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_row="7"
            android:columnCount="2" >
            
            <TextView
	            android:id="@+id/nombreEstadioLabel"
	            android:layout_column="0"
	            android:layout_gravity="start|top"
	            android:layout_row="0"
	            android:text="@string/label_estadio"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
	            android:id="@+id/nombreEstadioValue"
	            android:layout_column="1"
	            android:layout_gravity="start|top"
	            android:layout_row="0"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:text="@string/value_estadio"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
	            android:id="@+id/sociosLabel"
	            android:layout_column="0"
	            android:layout_gravity="start|top"
	            android:layout_row="1"
	            android:text="@string/label_socios"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
            
            <TextView
	            android:id="@+id/sociosValue"
	            android:layout_column="1"
	            android:layout_gravity="start|top"
	            android:layout_row="1"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:text="@string/value_socios"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </GridLayout>

    </GridLayout>

</RelativeLayout>
